--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ src="https://www.facebook.com/tr?id=580042525989845&ev=PageView
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="header10 cid-s48MTY5guK mbr-fullscreen mbr-parallax-background" id="header10-26">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="header10 cid-s48MTY5guK mbr-fullscreen mbr-parallax-background" id="header10-26">
 
     
 
@@ -380,14 +380,14 @@ src="https://www.facebook.com/tr?id=580042525989845&ev=PageView
             <div class="event-name align-left mbr-white ">
                 <h4 class="mbr-fonts-style display-5">SPECIAL DISCOUNT ENDS IN...</h4>
             </div>
-            <div class="countdown align-center py-2" data-due-date="2020/08/01">
+            <div class="countdown align-center py-2" data-due-date="2020/08/10">
             </div>
             <div class="daysCountdown col-xs-3 col-sm-3 col-md-3" title="Days"></div>
             <div class="hoursCountdown col-xs-3 col-sm-3 col-md-3" title="Hours"></div>
             <div class="minutesCountdown col-xs-3 col-sm-3 col-md-3" title="Minutes"></div>
             <div class="secondsCountdown col-xs-3 col-sm-3 col-md-3" title="Seconds"></div>
             <div class="event-date align-left mbr-white">
-                <h5 class="mbr-fonts-style display-7">Places are limited — August discount expires midnight on 31/07/2020<br></h5>
+                <h5 class="mbr-fonts-style display-7">Places are limited — August discount expires midnight on 9/08/2020<br></h5>
             </div>
         </div>
 
@@ -665,7 +665,7 @@ src="https://www.facebook.com/tr?id=580042525989845&ev=PageView
                 <div class="plan-body pb-5">
                     <div class="plan-list align-center">
                         <ul class="list-group list-group-flush mbr-fonts-style display-7">
-                            <li class="list-group-item">✔️ Same as the original programme</li><li class="list-group-item">✔️ *Some of the awards/scholarships offer partial funding only</li>
+                            <li class="list-group-item">✔️ Same as the original programme</li><li class="list-group-item">✔️ *Some of the awards/scholarships offer up to full funding and some offer partial funding</li>
                         </ul>
                     </div>
                     <div class="mbr-section-btn text-center pt-4"><a href="index.html#custom-html-2x" class="btn btn-primary display-4">APPLY NOW</a></div>
