--- a/Business-Management-Consultancy.html
+++ b/Business-Management-Consultancy.html
@@ -104,7 +104,7 @@ src="https://www.facebook.com/tr?id=580042525989845&ev=PageView
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free html templates</a></section><section class="header6 cid-s4NRadTBcm mbr-fullscreen mbr-parallax-background" id="header6-2g">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header6 cid-s4NRadTBcm mbr-fullscreen mbr-parallax-background" id="header6-2g">
 
     
 
@@ -183,7 +183,7 @@ src="https://www.facebook.com/tr?id=580042525989845&ev=PageView
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-4">
-                    © Copyright 2020 AAA Growth Experience Programme<br>13F, City Tower, Picadilly Plaza, New York St, Manchester, M1 4BT<br>Better than a summer school or internship! Gain experience, accelerate your growth, fast-track your career! — All Rights Reserved
+                    © Copyright 2020 AAA Growth Experience Programme<br>13F, City Tower, Piccadilly Plaza, New York St, Manchester, M1 4BT<br>Better than a summer school or internship! Gain experience, accelerate your growth, fast-track your career! — All Rights Reserved
                 </p>
             </div>
         </div>
