--- a/Experienced-Consultants.html
+++ b/Experienced-Consultants.html
@@ -104,7 +104,7 @@ src="https://www.facebook.com/tr?id=580042525989845&ev=PageView
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="header6 cid-s5hsF6gRLr mbr-fullscreen mbr-parallax-background" id="header6-35">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="header6 cid-s5hsF6gRLr mbr-fullscreen mbr-parallax-background" id="header6-35">
 
     
 
@@ -182,7 +182,7 @@ src="https://www.facebook.com/tr?id=580042525989845&ev=PageView
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-4">
-                    © Copyright 2020 AAA Growth Experience Programme<br>13F, City Tower, Picadilly Plaza, New York St, Manchester, M1 4BT<br>Better than a summer school or internship! Gain experience, accelerate your growth, fast-track your career! — All Rights Reserved
+                    © Copyright 2020 AAA Growth Experience Programme<br>13F, City Tower, Piccadilly Plaza, New York St, Manchester, M1 4BT<br>Better than a summer school or internship! Gain experience, accelerate your growth, fast-track your career! — All Rights Reserved
                 </p>
             </div>
         </div>
