--- a/Business-Management-Consultancy.html
+++ b/Business-Management-Consultancy.html
@@ -98,13 +98,13 @@ src="https://www.facebook.com/tr?id=580042525989845&ev=PageView
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="Business-Management-Consultancy.html">
                         Business &amp; Management Consultancy</a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">Experienced Consultants</a></li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="Experienced-Consultants.html">Experienced Consultants</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="header6 cid-s4NRadTBcm mbr-fullscreen mbr-parallax-background" id="header6-2g">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header6 cid-s4NRadTBcm mbr-fullscreen mbr-parallax-background" id="header6-2g">
 
     
 
