--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ src="https://www.facebook.com/tr?id=580042525989845&ev=PageView
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="header10 cid-s48MTY5guK mbr-fullscreen mbr-parallax-background" id="header10-26">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="header10 cid-s48MTY5guK mbr-fullscreen mbr-parallax-background" id="header10-26">
 
     
 
@@ -268,7 +268,7 @@ src="https://www.facebook.com/tr?id=580042525989845&ev=PageView
 
     <figure class="mbr-figure">
         <div class="image-block" style="width: 100%;">
-            <img src="assets/images/angled-black-72-p8-rubik.png" alt="AAA Remote Experience Programme" title="Campaign yelb">
+            <img src="assets/images/angled-black-72-p8-rubik.png" alt="AAA Remote Experience Programme" title="AAA Remote Experience Programme">
             
         </div>
     </figure>
@@ -374,14 +374,14 @@ src="https://www.facebook.com/tr?id=580042525989845&ev=PageView
             <div class="event-name align-left mbr-white ">
                 <h4 class="mbr-fonts-style display-5">SPECIAL DISCOUNT ENDS IN...</h4>
             </div>
-            <div class="countdown align-center py-2" data-due-date="2020/08/24">
+            <div class="countdown align-center py-2" data-due-date="2020/09/01">
             </div>
             <div class="daysCountdown col-xs-3 col-sm-3 col-md-3" title="Days"></div>
             <div class="hoursCountdown col-xs-3 col-sm-3 col-md-3" title="Hours"></div>
             <div class="minutesCountdown col-xs-3 col-sm-3 col-md-3" title="Minutes"></div>
             <div class="secondsCountdown col-xs-3 col-sm-3 col-md-3" title="Seconds"></div>
             <div class="event-date align-left mbr-white">
-                <h5 class="mbr-fonts-style display-7">Places are limited — August discount expires midnight on 23/08/2020<br></h5>
+                <h5 class="mbr-fonts-style display-7">Places are limited — August discount expires midnight on 31/08/2020<br></h5>
             </div>
         </div>
 
