--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ src="https://www.facebook.com/tr?id=580042525989845&ev=PageView
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="header10 cid-s48MTY5guK mbr-fullscreen mbr-parallax-background" id="header10-26">
+<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="header10 cid-s48MTY5guK mbr-fullscreen mbr-parallax-background" id="header10-26">
 
     
 
@@ -140,7 +140,7 @@ src="https://www.facebook.com/tr?id=580042525989845&ev=PageView
         <div class="media-container-column mbr-white col-md-12">
             
             <h1 class="mbr-section-title py-3 mbr-fonts-style display-1"><strong>AAA Growth</strong>&nbsp;2020<strong> </strong><br><strong>Experience Programme</strong></h1>
-            <p class="mbr-text py-3 mbr-fonts-style display-5"><strong>Fast-track your career</strong> through live project experience and bespoke training.<br></p>
+            <p class="mbr-text py-3 mbr-fonts-style display-5"><strong>Fast-track your career</strong> through live project experience and coaching-led training.<br></p>
             <div class="mbr-section-btn py-4"><a class="btn btn-md btn-primary display-4" href="index.html#custom-html-2x">APPLY NOW</a>
                     <a class="btn btn-md btn-white-outline display-4" href="index.html#content10-15">LEARN MORE</a></div>
         </div>
@@ -618,7 +618,7 @@ src="https://www.facebook.com/tr?id=580042525989845&ev=PageView
                 <div class="plan-body pb-5">
                     <div class="plan-list align-center">
                         <ul class="list-group list-group-flush mbr-fonts-style display-7">
-                            <li class="list-group-item">✔️ Receive training from high-calibre professionals</li><li class="list-group-item">✔️ Experience tackling live projects with a UK consultancy</li><li class="list-group-item">✔️ One-to-one career, CV and Cover Letter advice</li><li class="list-group-item">✔️ Join an alumni club with access to resources and a community of professionals</li><li class="list-group-item"><strong>✔️ ...and much more!</strong></li>
+                            <li class="list-group-item">✔️ Receive coaching-led training from high-calibre professionals</li><li class="list-group-item">✔️ Experience tackling live projects with a UK consultancy</li><li class="list-group-item">✔️ One-to-one career, CV and Cover Letter advice</li><li class="list-group-item">✔️ Join an alumni club with access to resources and a community of professionals</li><li class="list-group-item"><strong>✔️ ...and much more!</strong></li>
                         </ul>
                     </div>
                     <div class="mbr-section-btn text-center pt-4"><a href="index.html#custom-html-2x" class="btn btn-primary display-4">APPLY NOW</a></div>
