--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ src="https://www.facebook.com/tr?id=580042525989845&ev=PageView
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="header10 cid-s48MTY5guK mbr-fullscreen mbr-parallax-background" id="header10-26">
+<section class="engine"><a href="https://mobirise.info/z">best free website templates</a></section><section class="header10 cid-s48MTY5guK mbr-fullscreen mbr-parallax-background" id="header10-26">
 
     
 
@@ -343,7 +343,7 @@ src="https://www.facebook.com/tr?id=580042525989845&ev=PageView
                             <div class="media">
                                      
                                 <div class="media-body">
-                                    <h4 class="card-title mbr-fonts-style display-7">For a limited time, we're giving away a 30% discount on our full programme tuition fee. <br><br>For a chance to earn an additional 10% off, submit a <a href="index.html#header5-1e">cheat sheet</a> tip or quick win (scroll down for some inspiration). You must also submit a short response to the warm-up teaser question below. Only approved submissions, shared on social media qualify.</h4>
+                                    <h4 class="card-title mbr-fonts-style display-7">For a limited time, we're giving away a 30% discount on our full programme tuition fee. <br><br>For a chance to earn an additional 10% off, submit a <a href="index.html#header5-1e">cheat sheet</a> tip (scroll down for some inspiration). You must also submit a short response to the warm-up teaser question below. Only approved submissions, shared on social media qualify.</h4>
                                 </div>
                             </div>                
 
@@ -375,14 +375,14 @@ src="https://www.facebook.com/tr?id=580042525989845&ev=PageView
             <div class="event-name align-left mbr-white ">
                 <h4 class="mbr-fonts-style display-5">SPECIAL DISCOUNT ENDS IN...</h4>
             </div>
-            <div class="countdown align-center py-2" data-due-date="2020/09/11">
+            <div class="countdown align-center py-2" data-due-date="2020/09/28">
             </div>
             <div class="daysCountdown col-xs-3 col-sm-3 col-md-3" title="Days"></div>
             <div class="hoursCountdown col-xs-3 col-sm-3 col-md-3" title="Hours"></div>
             <div class="minutesCountdown col-xs-3 col-sm-3 col-md-3" title="Minutes"></div>
             <div class="secondsCountdown col-xs-3 col-sm-3 col-md-3" title="Seconds"></div>
             <div class="event-date align-left mbr-white">
-                <h5 class="mbr-fonts-style display-7">Places are limited — August discount expires midnight on 10/09/2020<br></h5>
+                <h5 class="mbr-fonts-style display-7">Places are limited — autumn discount expires midnight on 27/09/2020<br></h5>
             </div>
         </div>
 
